Update project files for Java 26 and consolidate module configurations